--- a/src/main/resources/templates/employeeList.html
+++ b/src/main/resources/templates/employeeList.html
@@ -11,6 +11,14 @@
 <body>
     <h2>Employees List</h2>
     <br><br>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <a th:href="@{/employees/addnew}" class="btn btn-primary btn-sm">Create new employee</a>
+            </div>
+        </div>
+    </div>
+    <br><br>
     <div class="container" th:if="${employees.size() > 0}">
         <table class="table table-hover table-responsive-md">
             <thead>
@@ -28,7 +36,10 @@
                     <td data-th-text="${employee.firstName}"></td>
                     <td data-th-text="${employee.lastName}"></td>
                     <td data-th-text="${employee.salary}"></td>
-                    <td></td>
+                    <td>
+                        <a class="btn-sm btn-delete" th:href="@{/employees/delete/{id}(id=${employee.id})}">Delete</a>
+                        <a class="btn-sm btn-primary" th:href="@{/employees/edit/{id}(id=${employee.id})}">Edit</a>
+                    </td>
                 </tr>
             </tbody>
         </table>
